camera_subscriber/log/build_2024-01-23_21-11-29/camera_subscriber/stderr.log
  File "/home/michal/projekt/camera_subscriber/install/camera_subscriber/lib/python3.10/site-packages/camera_subscriber/camera_node.py", line 1
    !/usr/bin/env python3
    ^
SyntaxError: invalid syntax

